--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,12 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.17.4)
+
 project(HelloCMake)
 
-add_library(myLib "")
+# Ensure -std=c++xx instead of -std=g++xx
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_subdirectory(include)
+# Support folders in IDEs
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+
 add_subdirectory(source)
+add_subdirectory(application)
